--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -108,7 +108,7 @@
               <thead class="mat-header-cell material">
                 Supplier Name
               </thead>
-              <thead class="mat-header-cell material">
+              <thead class="mat-header-cell material text-right">
                 PO Awarded
                 <br />
                 Value
@@ -117,14 +117,14 @@
                   selectedMenu === "Full Figures" ? "" : selectedMenu
                 }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
               </thead>
-              <thead class="mat-header-cell material">
+              <thead class="mat-header-cell material text-right">
                 GRN Amount
                 <br /><span *ngIf="selectedMenu !== 'Full Figures'">(</span
                 >{{
                   selectedMenu === "Full Figures" ? "" : selectedMenu
                 }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
               </thead>
-              <thead class="mat-header-cell material">
+              <thead class="mat-header-cell material text-right">
                 Amount Paid
                 <br />
                 till date
@@ -133,7 +133,7 @@
                   selectedMenu === "Full Figures" ? "" : selectedMenu
                 }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
               </thead>
-              <thead class="mat-header-cell material">
+              <thead class="mat-header-cell material text-right">
                 Yet to be
                 <br />
                 paid
@@ -149,10 +149,10 @@
                 <mat-expansion-panel-header class="border-row background-supplier background-projects">
                   <tr class="material-row backgound-none-important p-r-10">
                     <td class="mat-cell">{{ supplier.supplierName }}</td>
-                    <td class="mat-cell">{{ supplier.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
-                    <td class="mat-cell">{{ supplier.grnAmount / this.conversionNumber | number: "1.2-2" }}</td>
-                    <td class="mat-cell">{{ supplier.paymentRecived / this.conversionNumber | number: "1.2-2" }}</td>
-                    <td class="mat-cell">{{ (supplier.totalPoAmount - supplier.paymentRecived) / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell text-right">{{ supplier.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell text-right">{{ supplier.grnAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell text-right">{{ supplier.paymentRecived / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell text-right">{{ (supplier.totalPoAmount - supplier.paymentRecived) / this.conversionNumber | number: "1.2-2" }}</td>
                   </tr>
                 </mat-expansion-panel-header>
                 <!-- Project List -->
@@ -160,19 +160,19 @@
                   <mat-expansion-panel-header class="border-row background-category">
                     <tr class="material-row backgound-none-important p-r-10">
                       <td class="mat-cell">{{ project.projectName }}</td>
-                      <td class="mat-cell">{{ project.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
-                      <td class="mat-cell">{{ project.grnAmount / this.conversionNumber | number: "1.2-2" }}</td>
-                      <td class="mat-cell">{{ project.paymentRecived / this.conversionNumber | number: "1.2-2" }}</td>
-                      <td class="mat-cell">{{ (project.totalPoAmount - project.paymentRecived) / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell text-right">{{ project.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell text-right">{{ project.grnAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell text-right">{{ project.paymentRecived / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell text-right">{{ (project.totalPoAmount - project.paymentRecived) / this.conversionNumber | number: "1.2-2" }}</td>
                     </tr>
                   </mat-expansion-panel-header>
                   <!-- Project Details Of an Individual Project -->
                   <tr class="material-row border-row background-project-list" *ngFor="let poData of project.entityDataList">
                     <td class="mat-cell">{{ poData.entityLabel }}</td>
-                    <td class="mat-cell">{{ poData.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
-                    <td class="mat-cell">{{ poData.grnAmount / this.conversionNumber | number: "1.2-2" }}</td>
-                    <td class="mat-cell">{{ poData.paymentRecived / this.conversionNumber | number: "1.2-2" }}</td>
-                    <td class="mat-cell">{{ (poData.totalPoAmount - poData.paymentRecived) / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell text-right">{{ poData.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell text-right">{{ poData.grnAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell text-right">{{ poData.paymentRecived / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell text-right">{{ (poData.totalPoAmount - poData.paymentRecived) / this.conversionNumber | number: "1.2-2" }}</td>
                   </tr>
                 </mat-expansion-panel>
               </mat-expansion-panel>
@@ -180,10 +180,10 @@
             <!-- Total Amount Footer -->
             <tr class="material-row backgound-total-amount">
               <td class="mat-cell">Total Amount</td>
-              <td class="mat-cell">{{ supplierLiabiltyReportData.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
-              <td class="mat-cell">{{ supplierLiabiltyReportData.grnAmount / this.conversionNumber | number: "1.2-2" }}</td>
-              <td class="mat-cell">{{ supplierLiabiltyReportData.paymentRecived / this.conversionNumber | number: "1.2-2" }}</td>
-              <td class="mat-cell">{{ (supplierLiabiltyReportData.totalPoAmount - supplierLiabiltyReportData.paymentRecived) / this.conversionNumber | number: "1.2-2" }}</td>
+              <td class="mat-cell text-right">{{ supplierLiabiltyReportData.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
+              <td class="mat-cell text-right">{{ supplierLiabiltyReportData.grnAmount / this.conversionNumber | number: "1.2-2" }}</td>
+              <td class="mat-cell text-right">{{ supplierLiabiltyReportData.paymentRecived / this.conversionNumber | number: "1.2-2" }}</td>
+              <td class="mat-cell text-right">{{ (supplierLiabiltyReportData.totalPoAmount - supplierLiabiltyReportData.paymentRecived) / this.conversionNumber | number: "1.2-2" }}</td>
             </tr>
           </table>
         </div>
