--- a/src/assets/scss/pages/grn.scss
+++ b/src/assets/scss/pages/grn.scss
@@ -96,6 +96,7 @@ $mat-row-horizontal-padding: 12px;
   }
   .background-project-list {
     background: #ffffff;
+    padding-right: 32px;
   }
   .grn-material-row {
     min-height: 38px;
