--- a/src/assets/scss/pages/report.scss
+++ b/src/assets/scss/pages/report.scss
@@ -128,6 +128,7 @@
 
   .mat-header-row {
     background: #2197bb;
+    padding-right: 22px;
 
     span {
       color: #ffffff !important;
@@ -153,6 +154,7 @@
     }
     .background-project-list{
       background: #ffffff;
+      padding-right: 22px;
     }
     .material-row {
       min-height: 38px;
