--- a/src/assets/scss/pages/report.scss
+++ b/src/assets/scss/pages/report.scss
@@ -51,6 +51,7 @@
   .backgound-total-amount{
     background: #d6d3d3;
     font-weight: 500;
+    padding-right: 40px !important;
   }
   .mat-select-value{
     padding-top: 5px;
@@ -95,6 +96,7 @@
 
   .mat-header-row.ctc-report-header-row{
     height: auto;
+    padding-right: 35px;
   }
 
   .mat-row {
@@ -128,7 +130,7 @@
 
   .mat-header-row {
     background: #2197bb;
-    padding-right: 22px;
+    padding-right: 40px;
 
     span {
       color: #ffffff !important;
@@ -154,7 +156,7 @@
     }
     .background-project-list{
       background: #ffffff;
-      padding-right: 22px;
+      padding-right: 40px;
     }
     .material-row {
       min-height: 38px;
@@ -186,6 +188,10 @@
     .background-projects{
       background-color: #EFFBFF !important;
     }
+
+    .mat-expansion-indicator:after{
+      padding: 6px;
+    }
   }
 
   .radio-btn-group-report-table {
@@ -202,11 +208,15 @@
 
   .mat-expansion-panel-header{
     padding-left: 0px;
-    padding-right: 5px;
+    padding-right: 12px;
     background: #979797;
   }
   .mat-expansion-panel-body{
     padding: 0;
+  }
+
+  .mat-content{
+    padding-right: 4px;
   }
 }
 .reportTablePo .mat-cell, .reportTablePo .mat-header-cell{
