supplier liability and CTC report - excel download api integrated, receipts details page - due toh changes in api response, handling in frontend changes

--- a/src/app/features/reports/ctc-report/ctc-report.component.html
+++ b/src/app/features/reports/ctc-report/ctc-report.component.html
@@ -28,7 +28,7 @@
         <div class="col-md-9 add-project-btn display-flex justify-content-flex-end align-items-center">
           <!------ Download Report ------>
           <div class="download-report pr-3">
-            <a class="font-size16 cursor-pointer" matTooltip="Download"> <img
+            <a class="font-size16 cursor-pointer" matTooltip="Download" (click)="downloadExcel()"> <img
                 src="../../../../assets/images/download-po.png" /></a>
           </div>
 
