--- a/src/app/features/first-login/profile-subscriptions/profile-subscriptions.component.html
+++ b/src/app/features/first-login/profile-subscriptions/profile-subscriptions.component.html
@@ -1,2 +1,3 @@
+<div class="subs-bg-col h-50"></div>
 <app-subscriptions [data]="subscriptionsData" (startTrial)="startTrialEvent()" [trialAction]="true">
 </app-subscriptions>
