--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -283,12 +283,12 @@ button.active {
 }
 
 .trial-block{
-  background-color: #2496bb;
+  background-color: #0c3c55;
   color:#ffffff;
   display: block;
   text-align: center;
   position: relative;
-  padding: 5px;
+  padding: 12px 5px;
   button{
     line-height: 28px;
     border-radius:20px;
